# se_cleanup

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
.cargo/: config
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: getfileversion.rs  infos.rs  main.rs  mqtt.rs  starter.rs  updater.rs  winregistry.rs
