[package]
name = "se_cleanup"
version = "0.1.0"
authors = ["Nicolas Brüggemann <nbrueggemann@itcoops.de>"]

[dependencies]
clap = "*"
rumqtt = { git = "https://github.com/AtherEnergy/rumqtt", branch = "tokio2"}
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
interfaces = "0.0.3"
#winreg = "0.5"